--- a/style.css
+++ b/style.css
@@ -36,9 +36,25 @@ footer {
 
 /* specifieke stijlen */
 
-img.TEAMVVV {
+img.upperimg {
     float: left;
     margin-right: 30px;
+    margin-bottom: 12px;
+    width: 700px;
+}
+
+img.rocketleagueimg {
+float: right;
+margin-left: 30px;
+width: 250px;
+margin-bottom: 12px;
+
+
+}
+
+img.upperimgrl {
+margin-bottom: 12px;
+    float: left;
     width: 700px;
 }
 
@@ -49,15 +65,17 @@ img.zweefLinks {
     }
 
 img.zweefrechts {
-float:right;
-margin-left: 15px;
+float:left;
+margin-right: 15px;
 width:150px;
 }
 
 img.vvvlogo {
-float:right;
-margin-left:10px;
-width:200px;
+float:left;
+margin-right:20px;
+width:230px;
+margin-bottom: 1px;
+height: 145px;
 }
 
 img.esportsfoto {
