--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@
 html, body {
     height: 100%;
     padding: 0;
-    background-color: rgb(29, 29, 29);  
-    
+    background-color: rgb(0, 0, 0);  
+    background-image: url("afbeeldingen/venlobackground.jpeg");
     color: #ffffff;
     font: Verdana, Arial, Sans-Serif;
 }
@@ -14,6 +14,9 @@ main {
     margin: 0 auto;
     width: 700px;
     position: relative;
+
+    background-color: #000000;
+    padding: 25px;
 }
 
 
@@ -126,7 +129,7 @@ nav ul li {
 
 nav li a {
     display: block;
-    color: white;
+    color: rgb(255, 255, 255);
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
