--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html, body {
     height: 100%;
     padding: 0;
     background-color: rgb(0, 0, 0);  
-    background-image: url("afbeeldingen/venlobackground.jpeg");
+    background-image: url("afbeeldingen/rockerleg.jpeg");
     color: #ffffff;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
@@ -15,7 +15,7 @@ main {
     width: 700px;
     position: relative;
 
-    background-color: #000000;
+    background-color: #333333;
     padding: 25px;
 }
 
@@ -85,6 +85,14 @@ img.esportsfoto {
 float:right;
 margin-left:10px;
 width:250px;
+}
+
+img.justzero {
+float:right;
+margin-left: 10px;
+width: 200px;
+margin-top: 10px;
+
 }
 
 img.Squishy { 
